Add standardise parameter for MMV Job
